<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_bridge_portrait"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/opacity_white_200" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:padding="@dimen/default_padding"
        android:columnCount="4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expression_text_view"
            style="@style/expression_text_style"
            android:layout_columnSpan="4"
            android:layout_gravity="end"
            tools:text="@string/sample_expression" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_button"
            style="@style/func_button_style"
            android:text="@string/clear_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/del_button"
            style="@style/func_button_style"
            android:text="@string/del_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/percent_button"
            style="@style/func_button_style"
            android:text="@string/percent_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/div_button"
            style="@style/func_button_style"
            android:text="@string/div_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num7_button"
            style="@style/num_button_style"
            android:text="@string/num7_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num8_button"
            style="@style/num_button_style"
            android:text="@string/num8_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num9_button"
            style="@style/num_button_style"
            android:text="@string/num9_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiplication_button"
            style="@style/func_button_style"
            android:text="@string/multiplication_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num4_button"
            style="@style/num_button_style"
            android:text="@string/num4_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num5_button"
            style="@style/num_button_style"
            android:text="@string/num5_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num6_button"
            style="@style/num_button_style"
            android:text="@string/num6_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minus_button"
            style="@style/func_button_style"
            android:text="@string/minus_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num1_button"
            style="@style/num_button_style"
            android:text="@string/num1_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num2_button"
            style="@style/num_button_style"
            android:text="@string/num2_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num3_button"
            style="@style/num_button_style"
            android:text="@string/num3_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plus_button"
            style="@style/func_button_style"
            android:layout_rowSpan="2"
            android:text="@string/plus_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num0_button"
            style="@style/num_button_style"
            android:layout_columnSpan="2"
            android:text="@string/num0_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/num00_button"
            style="@style/num_button_style"
            android:text="@string/num00_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equal_button"
            style="@style/func_button_style"
            android:layout_columnSpan="3"
            android:text="@string/equal_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dot_button"
            style="@style/func_button_style"
            android:text="@string/dot_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_second_activity_button"
            style="@style/num_button_style"
            android:layout_columnSpan="4"
            android:text="@string/second_activity_button" />
    </GridLayout>
</FrameLayout>